# Malabou

./: .gitignore  DataExploration.ipynb  LICENSE  Lexer.py  ModelDemo.ipynb  README.md  create_sentence_list.py  utils.py
Malabout/: CHANGELOG.md  Malabout.cabal  README.md  stack.yaml
Malabout/app/: Main.hs
Malabout/src/: Malabout.hs
data/: 2008 What should we do with our brain (C. Malabou).rtf  2008 What should we do with our brain (C. Malabou).txt  onlyParaQuote.hs
data/Set1HasParagraphs/: 19 _ Repetition revenge plasticity.txt  23 _ Are there still traces.txt  7 _ Is Science the Subject of Philosophy.txt  Deconstructing the philosophical resistance to biology.txt  Loader.py  PHANTOM LIMBS AND PLASTICITY.txt  WHITHER MATERIALISM for book.txt  Will sovereignty.txt
data/output/: 2008 What should we do with our brain (C. Malabou)-output.txt
