cabal-version:       2.0
name:                Malabout
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/o1lo01ol1o/Malabout
bug-reports:         https://github.com/o1lo01ol1o/Malabout/issues
license:             MIT
license-file:        LICENSE
author:              Tim Pierson
maintainer:          tim.pierson@gmail.com
copyright:           2019 Tim Pierson
category:            Utilities
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/o1lo01ol1o/Malabout.git

library
  hs-source-dirs:      src
  exposed-modules:     Malabout
                       

  build-depends:       base ^>= 4.12.0.0
                      , text
                      , containers
                      , bytestring
                      , megaparsec 
                      , aeson
                     

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

executable Malabout
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.12.0.0
                     , Malabout
                     , optparse-applicative
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010

test-suite Malabout-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base ^>= 4.12.0.0
                     , Malabout
                     

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  default-language:    Haskell2010
